# sonic-swss

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  WORKSPACE  bazel-bin  bazel-out  bazel-sonic-swss  bazel-testlogs  build_in_docker.sh  build_instruction.md  swss_deps.bzl  swss_helpers.bzl
bazel/dashapi/: BUILD.bazel  dashapi.BUILD  dashapi.bzl
bazel/hiredis/: BUILD.bazel  hiredis.BUILD  hiredis.bzl
bazel/jansson/: BUILD.bazel  jansson.BUILD  jansson.bzl
bazel/libnl3/: BUILD.bazel  libnl3.BUILD  libnl3.bzl
bazel/libteam/: BUILD.bazel  libteam.BUILD  libteam.bzl
bazel/saimetadata/: BUILD.bazel  saimetadata.BUILD  saimetadata.bzl
bazel/sairedis/: BUILD.bazel  sairedis.BUILD  sairedis.bzl
bazel/saivs/: BUILD.bazel  saivs.BUILD  saivs.bzl
bazel/swsscommon/: BUILD.bazel  swsscommon.BUILD  swsscommon.bzl
bazel/zmq/: BUILD.bazel  zmq.BUILD  zmq.bzl
cfgmgr/: BUILD  Makefile.am  buffermgr.cpp  buffermgr.h  buffermgrd.cpp  buffermgrdyn.cpp  buffermgrdyn.h  coppmgr.cpp  coppmgr.h  coppmgrd.cpp  fabricmgr.cpp  fabricmgr.h  fabricmgrd.cpp  intfmgr.cpp  intfmgr.h  intfmgrd.cpp  macsecmgr.cpp  macsecmgr.h  macsecmgrd.cpp  natmgr.cpp  natmgr.h  natmgrd.cpp  nbrmgr.cpp  nbrmgr.h  nbrmgrd.cpp  portmgr.cpp  portmgr.h  portmgrd.cpp  sflowmgr.cpp  sflowmgr.h  sflowmgrd.cpp  teammgr.cpp  teammgr.h  teammgrd.cpp  tunnelmgr.cpp  tunnelmgr.h  tunnelmgrd.cpp  vlanmgr.cpp  vlanmgr.h  vlanmgrd.cpp  (+6 more)
fdbsyncd/: BUILD  Makefile.am  fdbsync.cpp  fdbsync.h
fpmsyncd/: BUILD  Makefile.am  fpminterface.h  fpmlink.h  fpmsyncd.cpp  routesync.h
gcovpreload/: BUILD
gearsyncd/: BUILD  Makefile.am  gearboxparser.cpp  gearboxparser.h  gearparserbase.cpp  gearsyncd.cpp  phyparser.cpp  phyparser.h
gearsyncd/tests/: testgearparser.cpp  testphyparser.cpp
lib/: BUILD  gearboxutils.cpp  recorder.cpp  subintf.cpp
mclagsyncd/: BUILD
natsyncd/: BUILD  Makefile.am  natsync.cpp  natsync.h  natsyncd.cpp
neighsyncd/: BUILD  Makefile.am  neighsync.cpp  neighsync.h
orchagent/: BUILD  Makefile.am  aclorch.cpp  aclorch.h  bfdorch.cpp  bfdorch.h  bufferorch.cpp  bufferorch.h  chassisorch.cpp  chassisorch.h  copporch.cpp  copporch.h  countercheckorch.cpp  countercheckorch.h  crmorch.cpp  crmorch.h  debugcounterorch.cpp  debugcounterorch.h  dtelorch.cpp  dtelorch.h  fabricportsorch.cpp  fabricportsorch.h  fdborch.cpp  fdborch.h  fgnhgorch.cpp  fgnhgorch.h  flexcounterorch.cpp  flexcounterorch.h  intfsorch.cpp  intfsorch.h  isolationgrouporch.cpp  isolationgrouporch.h  lagid.cpp  macsecorch.cpp  macsecorch.h  main.cpp  mirrororch.cpp  mirrororch.h  mlagorch.cpp  mlagorch.h  (+63 more)
orchagent/cbf/: cbfnhgorch.cpp  cbfnhgorch.h  nhgmaporch.cpp  nhgmaporch.h
orchagent/dash/: dashaclgroupmgr.cpp  dashaclgroupmgr.h  dashaclorch.cpp  dashaclorch.h  dashorch.cpp  dashorch.h  dashrouteorch.cpp  dashrouteorch.h  dashtagmgr.cpp  dashtagmgr.h  dashvnetorch.cpp  dashvnetorch.h  pbutils.cpp  taskworker.h
orchagent/debug_counter/: debug_counter.cpp  drop_counter.cpp  drop_counter.h
orchagent/flex_counter/: flex_counter_manager.cpp  flex_counter_stat_manager.cpp  flex_counter_stat_manager.h  flow_counter_handler.cpp  flowcounterrouteorch.cpp  flowcounterrouteorch.h
orchagent/p4orch/: acl_rule_manager.cpp  acl_rule_manager.h  acl_table_manager.cpp  acl_table_manager.h  acl_util.cpp  acl_util.h  ext_tables_manager.cpp  ext_tables_manager.h  gre_tunnel_manager.cpp  gre_tunnel_manager.h  l3_admit_manager.cpp  l3_admit_manager.h  mirror_session_manager.cpp  mirror_session_manager.h  neighbor_manager.cpp  neighbor_manager.h  next_hop_manager.cpp  next_hop_manager.h  object_manager_interface.h  p4oidmapper.cpp  p4orch.cpp  p4orch.h  p4orch_util.cpp  route_manager.cpp  route_manager.h  router_interface_manager.cpp  router_interface_manager.h  tables_definition_manager.cpp  tables_definition_manager.h  wcmp_manager.cpp  wcmp_manager.h
orchagent/p4orch/tests/: acl_manager_test.cpp  fake_crmorch.cpp  fake_flexcounterorch.cpp  fake_flowcounterrouteorch.cpp  fake_portorch.cpp  gre_tunnel_manager_test.cpp  l3_admit_manager_test.cpp  mirror_session_manager_test.cpp  mock_response_publisher.h  mock_sai_acl.cpp  mock_sai_hostif.cpp  mock_sai_router_interface.cpp  mock_sai_serialize.cpp  mock_sai_switch.cpp  mock_sai_udf.cpp  neighbor_manager_test.cpp  next_hop_manager_test.cpp  p4oidmapper_test.cpp  p4orch_util_test.cpp  return_code_test.cpp  route_manager_test.cpp  router_interface_manager_test.cpp  test_main.cpp  wcmp_manager_test.cpp
orchagent/pbh/: pbhcap.cpp  pbhcnt.cpp  pbhmgr.cpp  pbhmgr.h  pbhrule.cpp  pbhrule.h
orchagent/port/: port_capabilities.cpp  porthlpr.cpp  porthlpr.h
orchagent/switch/: switch_capabilities.cpp  switch_helper.cpp  switch_helper.h
portsyncd/: BUILD  Makefile.am  linksync.cpp
swssconfig/: BUILD
teamsyncd/: BUILD  teamsync.cpp  teamsyncd.cpp
tests/: BUILD  Makefile.am  quoted_ut.cpp  request_parser_ut.cpp  swssnet_ut.cpp
tests/mock_tests/: BUILD  Makefile.am  aclorch_ut.cpp  buffermgrdyn_ut.cpp  bufferorch_ut.cpp  bulker_ut.cpp  consumer_ut.cpp  copp_ut.cpp  copporch_ut.cpp  fake_response_publisher.cpp  fake_warmstarthelper.cpp  flexcounter_ut.cpp  flowcounterrouteorch_ut.cpp  intfsorch_ut.cpp  mock_orch_test.h  mock_orchagent_main.cpp  mock_orchagent_main.h  mock_sai_api.cpp  mock_sai_api.h  mux_rollback_ut.cpp  neighorch_ut.cpp  orchdaemon_ut.cpp  portal.h  portmgr_ut.cpp  portsorch_ut.cpp  qosorch_ut.cpp  routeorch_ut.cpp  saispy_ut.cpp  sflowmgrd_ut.cpp  sfloworh_ut.cpp  switchorch_ut.cpp  swssnet_ut.cpp  test_failure_handling.cpp  twamporch_ut.cpp  ut_helper.h  ut_saihelper.cpp  warmrestartassist_ut.cpp  warmrestarthelper_ut.cpp
tests/mock_tests/fdborch/: flush_syncd_notif_ut.cpp
tests/mock_tests/fpmsyncd/: test_routesync.cpp
tests/mock_tests/intfmgrd/: intfmgr_ut.cpp
tests/mock_tests/portsyncd/: portsyncd_ut.cpp
tests/mock_tests/response_publisher/: response_publisher_ut.cpp
tests/mock_tests/teammgrd/: teammgr_ut.cpp
tlm_teamd/: BUILD  Makefile.am  main.cpp  teamdctl_mgr.cpp  values_store.cpp
warmrestart/: BUILD  warmRestartAssist.cpp  warmRestartHelper.cpp
