module(name = "sonic-swss")

# Deps from //:swss_deps.bzl
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "com_google_googletest")

#bazel_dep(name = "grpc", version = "1.58.0")
bazel_dep(name = "grpc", version = "1.62.1")  # TODO BL:  1.58.0 was not in the BCR, patching for now

#bazel_dep(name = "protobuf", version = "3.21.2")
bazel_dep(name = "protobuf", version = "3.19.6")  # TODO BL: 3.21.2 was not in the BCR
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_foreign_cc", version = "0.11.1")
bazel_dep(name = "aspect_rules_py", version = "1.7.1")

# Deps we need for starlarkified rulesets
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_distroless", version = "0.6.1", repo_name = "rules_deb")
# git_override(
#     module_name = "rules_distroless",
#     commit = "5d1c4e8e24bfb7362fd19813e554063e32da9c9d",  # tip of `new_api` in https://github.com/bazel-contrib/rules_distroless/pull/183
#     remote = "https://github.com/bazel-contrib/rules_distroless",
# )
local_path_override(
  module_name = "rules_distroless",
  path = "../../bazel-contrib/rules_distroless",
)


apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")

# TODO BL: Copypasted from https://github.com/thesayyn/sonic-buildimage/blob/9c66e0cb376b616ced4e2f5b22e383260e811969/dockers/docker-base-bookworm/base_bookworm.MODULE.bazel#L2C1-L16C1
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = [
        "bookworm",
        "bookworm-updates",
    ],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)
apt.install(
    dependency_set = "bookworm",
    packages = [
        "libdbus-1-3",
        "libhiredis-dev",
        "libhiredis0.14",
        "libzmq3-dev",
        "libzmq5",
        "libjansson4",
        "libjansson-dev",
        "libteam5",
        "libteamdctl0",
        "libteam-dev",

        # TODO BL: this is a preinstalled package from https://github.com/sonic-net/sonic-sairedis, but we may want to migrate that to Bazel
        # "libsairedis",
    ],
    suites = [
        "bookworm",
        "bookworm-updates",
    ],
)
use_repo(apt, "bookworm")

bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")

# git_override(
#     module_name = "sonic-swss-common",
#     commit = "fb068d7dd7f6f4f63c48d85ba9135b3b78d8d804",  # Tip of master
#     remote = "https://github.com/thesayyn/sonic-swss-common",
# )
local_path_override(
    module_name = "sonic-swss-common",
    path = "../../sonic-net/sonic-swss-common",
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
# git_override(
#     module_name = "sonic-build-infra",
#     commit = "01d897a9e7b7aea219a389ccd5112233f26576b8",  # Tip of master
#     remote = "https://github.com/thesayyn/sonic-build-infra",
# )
local_path_override(
    module_name = "sonic-build-infra",
    path = "../../sonic-net/sonic-build-infra",
)

bazel_dep(name = "sonic-sairedis", version = "0.0.0", repo_name = "sonic_sairedis")
local_path_override(
    module_name = "sonic-sairedis",
    path = "../../sonic-net/sonic-sairedis",
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")
