module(name = "sonic-swss")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


"""Third party dependencies.

Please read carefully before adding new dependencies:
- Any dependency can break all of swss. Please be mindful of that before
  adding new dependencies. Try to stick to stable versions of widely used libraries.
  Do not depend on private repositories and forks.
- Fix dependencies to a specific version or commit, so upstream changes cannot break
  swss. Prefer releases over arbitrary commits when both are available.
"""

# This is an http_archives because we don't want the wrong version of abseil to resolve and require C++17
http_archive(
    name = "com_google_googletest",
    sha256 = "78c676fc63881529bf97bf9d45948d905a66833fbfa5318ea2cd7478cb98f399",
    strip_prefix = "googletest-1.16.0",
    urls = ["https://github.com/google/googletest/releases/download/v1.16.0/googletest-1.16.0.tar.gz"],
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_foreign_cc", version = "0.11.1")
bazel_dep(name = "aspect_rules_py", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

# Deps we need for starlarkified rulesets
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_distroless", version = "0.6.1", repo_name = "rules_deb")
local_path_override(
  module_name = "rules_distroless",
  path = "../rules_distroless",
)

apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = [
        "bookworm",
        "bookworm-updates",
    ],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)
apt.install(
    dependency_set = "bookworm",
    packages = [
        "libdbus-1-3",
        "libhiredis-dev",
        "libhiredis0.14",
        "libzmq3-dev",
        "libzmq5",
        "libjansson4",
        "libjansson-dev",
        "libteam5",
        "libteamdctl0",
        "libteam-dev",

        "libyang2-dev",

        # TODO: These are just to debug //tests/mock_tests:tests, we should remove them once it works.
        "libboost-dev",
        "libboost-serialization-dev",
        "libboost-serialization1.74-dev",
    ],
    suites = [
        "bookworm",
        "bookworm-updates",
    ],
)
use_repo(apt, "bookworm")

bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")
local_path_override(
    module_name = "sonic-swss-common",
    path = "../sonic-swss-common",
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra",
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "sonic-sairedis", version = "0.0.0", repo_name = "sonic_sairedis")
local_path_override(
    module_name = "sonic-sairedis",
    path = "../sonic-sairedis",
)

bazel_dep(name = "sai", version = "0.0.0")
local_path_override(
    module_name = "sai",
    path = "../sonic-sairedis/SAI",
)

bazel_dep(name = "sonic-dash-api", version = "0.0.0", repo_name = "sonic_dash_api")
local_path_override(
    module_name = "sonic-dash-api",
    path = "../sonic-dash-api",
)
