package(default_visibility = ["//visibility:public"])

# cc_library(
# TODO BL: Do we even need the _headers_ target?
alias(
    name = "jansson_headers",
    actual = "@bookworm//libjansson-dev:libjansson",
)

# cc_import(
alias(
    name = "jansson",
    # TODO BL: This is wrong, but weirdly there is no alias in @bookworm that depends on the real target
    # actual = "@bookworm//libjansson4:libjansson4",
    # actual = "@@rules_distroless++apt+bookworm_libjansson4-amd64_2.14-2//:libjansson4",
    actual = "@bookworm//libjansson-dev:libjansson",
)
