package(default_visibility = ["//visibility:public"])

# TODO BL: Clean up unused rules
# cc_library(
alias(
    name = "libnl3_headers",
    actual = "@bookworm//libnl-3-dev:libnl-3", # TODO BL: This is probably not right, will fail loudly
)

# cc_import(
alias(
    name = "libnl3",
    actual = "@bookworm//libnl-3-dev:libnl-3",
)

# cc_import(
alias(
    name = "libnl-route-3",
    actual = "@bookworm//libnl-route-3-dev:libnl-route-3-dev",
)

# cc_import(
alias(
    name = "libnl-genl-3",
    actual = "@bookworm//libnl-genl-3-dev:libnl-genl-3-dev",
)

# cc_import(
alias(
    name = "libnl-nf-3",
    actual = "@bookworm//libnl-nf-3-dev:libnl-nf-3-dev",
)

