load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

package(default_visibility = ["//visibility:public"])

alias(
  name = "swsscommon",
  actual = "@sonic_swss_common//:libswsscommon",
)

cc_import(
  name = "swsscommon_so_prebuilt",
  shared_library = "@sonic_swss_common//:libswsscommon_consolidated.so",
)

alias(
  name = "swsscommon_shared",
  actual = ":swsscommon_so_prebuilt",
)

